# src/configs/swagger/swagger.conf.json
@@ -76,6 +76,33 @@
                 }
             }
         },
+        "/auth/logout": {
+            "get": {
+                "tags": ["Auth"],
+                "security": [{ "bearerAuth": [] }],
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/Success"
+                    },
+                    "201": {
+                        "$ref": "#/components/responses/Created"
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequest"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/Unauthorized"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/InternalServerError"
+                    }
+                }
+            }
+        },
         "/master/barang": {
             "get": {
                 "tags": ["Master"],
